# kernel

./: .gitignore  grub.cfg  linker.ld  meson.build  meson_options.txt
.github/workflows/: kernel.yml
arch/i686/: debug.txt  release.txt
scripts/: mkiso.sh  qemu.sh
source/: meson.build
source/common/: SConscript  main.cpp  meson.build
source/i686/: meson.build
source/i686/boot/: SConscript  bootstrap.asm  header.asm
